--- a/backend-dotnet/backend-dotnet.csproj
+++ b/backend-dotnet/backend-dotnet.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
+    <PackageReference Include="net-questdb-client" Version="2.1.0" />
+    <PackageReference Include="Npgsql" Version="9.0.3" />
   </ItemGroup>
 
 </Project>
