further timescaledb configuration exploration; complete questdb data layer method set; configure directory structure with minimal api usage in mind; add serilog; add request logging filter

--- a/backend-dotnet/appsettings.json
+++ b/backend-dotnet/appsettings.json
@@ -13,5 +13,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [ "Console" ]
+  },
   "AllowedHosts": "*"
 }
