fix questdb schema ensurance; handle environment variables via a helper

--- a/backend-dotnet/appsettings.json
+++ b/backend-dotnet/appsettings.json
@@ -1,16 +1,8 @@
 {
-  "Auth": {
-    "Uri": "",
-    "Username": "",
-    "Password": ""
-  },
-  "Wss": {
-    "Uri": ""
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "Serilog": {
@@ -18,7 +10,7 @@
       "Default": "Information",
       "Override": {
         "Microsoft": "Information",
-        "System": "Warning"
+        "System": "Information"
       }
     },
     "WriteTo": [ "Console" ]
