--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,52 +1,44 @@
 services:
-  timescaledb:
-    build:
-      context: ./timescaledb
-      dockerfile: Dockerfile
-    container_name: finta-timescaledb
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_DB: AssetMarket
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-    volumes:
-      - pg_data:/var/lib/postgresql/data
-    networks:
-      - finta_network
+  # questdb:
+  #   image: questdb/questdb
+  #   container_name: fintacharts-questdb
+  #   ports:
+  #     - "9000:9000" # web console
+  #     - "9009:9009" # InfluxDB line protocol
+  #     - "9009:9009" # PostgreSQL wire protocol
+  #   volumes:
+  #     - ./questdb_data:/root/.questdb
+  #   environment:
+  #     - QDB_CAIRO_SQL_COPY_BUFFER_SIZE=2097152
+  #   networks:
+  #     - finta_network
 
   backend:
     build:
-      context: ./backend
-      dockerfile: dockerfile
+      context: ./backend-dotnet
+      dockerfile: Dockerfile
     container_name: finta-backend-dotnet
     ports:
-      - "5000:8080"
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:8080
-    depends_on:
-      - timescaledb
+      - "5000:5000"
+    # depends_on:
+    #   - questdb
     networks:
       - finta_network
 
   frontend:
     build:
-      context: ./frontend
+      context: ./frontend-solid
       dockerfile: Dockerfile
     container_name: finta-frotnend-solid
     ports:
       - "3000:3000"
-    environment:
-      - VITE_API_BASE_URL=http://localhost:5000
-      - VITE_WS_URL=ws://localhost:5000/ws
     depends_on:
       - backend
-    networkds:
+    networks:
       - finta_network
 
-volumes:
-  pg_data:
+# volumes:
+#   questdb_data:
 
 networks:
   finta_network:
