update readme; update docker files; change asset component layout; stop disconnecting apis when relay client connection list shrinks to 0

--- a/backend-dotnet/appsettings.Development.json
+++ b/backend-dotnet/appsettings.Development.json
@@ -4,5 +4,16 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Information"
     }
-  }
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information"
+      }
+    },
+    "WriteTo": [ "Console" ]
+  },
+  "AllowedHosts": "*"
 }
