--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,10 @@ services:
       - "5000:5000"
     # depends_on:
     #   - questdb
+    environment:
+      - ASPNETCORE_URLS=http://0.0.0.0:5000
+    env_file:
+      - .env
     networks:
       - finta_network
 
@@ -34,6 +38,8 @@ services:
       - "3000:3000"
     depends_on:
       - backend
+    env_file:
+      - .env
     networks:
       - finta_network
 
