--- a/frontend-solid/Dockerfile
+++ b/frontend-solid/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:22
-EXPOSE 3000
 WORKDIR /app
 COPY . ./
 RUN npm i
-CMD ["npm", "run", "start"]
+EXPOSE 3000
+CMD ["npx", "vite", "preview", "--host", "0.0.0.0", "--port", "3000"]
