--- a/frontend-solid/Dockerfile
+++ b/frontend-solid/Dockerfile
@@ -2,5 +2,6 @@ FROM node:22
 WORKDIR /app
 COPY . ./
 RUN npm i
+RUN npm run build
 EXPOSE 3000
 CMD ["npx", "vite", "preview", "--host", "0.0.0.0", "--port", "3000"]
